--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 header{
     background-color: #264653;
 }
+.purchase-button{
+    background-color: #E76F51;
+    padding: 5px 40px ;
+
+}
+.image-grayscale{
+    filter: grayscale(100%);
+}
