--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/* font style  */
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+/* global */
+body{
+    font-family: 'poppins',sans-serif;
+}
 header{
     background-color: #264653;
 }
@@ -8,4 +15,12 @@ header{
 }
 .image-grayscale{
     filter: grayscale(100%);
+}
+h1{
+    font-weight: 700;
+}
+
+/* features section  */
+.orange-color{
+    color: #E76F51;
 }
